update ignore engines

--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,9 @@
-MONGODB_URI=mongodb+srv://lpemember:Y7sw8OOYnTOJQf2e@clusterlpe.b49ua.mongodb.net/be_lpe?retryWrites=true&w=majority
+MONGODB_URI=mongodb+srv://ttkien94:Kien@@12@cluster0.qygaj.mongodb.net/?retryWrites=true&w=majority
+    #   - MONGODB_URI=mongodb+srv://ttkien94:Kien@@12@cluster0.qygaj.mongodb.net/?retryWrites=true&w=majority
+# mongodb+srv://lpemember:Y7sw8OOYnTOJQf2e@clusterlpe.b49ua.mongodb.net/be_lpe?retryWrites=true&w=majority
 PORT=5000
+
+
 ### NODEMAILER
 EMAIL=it.im@lpe.vn
 PASSWORDEMAIL=lpe.team
