--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.15",
     "multer": "^1.4.2",
+    "node": "^20.6.0",
     "nodemailer": "^6.6.2",
     "nodemon": "^2.0.7",
     "swagger-jsdoc": "^6.1.0",
