--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/plugin-transform-private-property-in-object": "^7.22.11",
     "@date-io/date-fns": "^1.3.13",
     "@editorjs/checklist": "^1.3.0",
     "@editorjs/code": "^2.7.0",
@@ -44,9 +45,9 @@
     "moment-timezone": "^0.5.34",
     "prop-types": "^15.7.2",
     "query-string": "^7.1.1",
-    "react": "^17.0.2",
-    "react-confirm-alert": "^2.8.0",
-    "react-dom": "^17.0.2",
+    "react": "^18.1.0",
+    "react-confirm-alert": "^3.0.6",
+    "react-dom": "^18.1.0",
     "react-editor-js": "^2.0.6",
     "react-image-lightbox": "^5.1.4",
     "react-lazyload": "^3.2.0",
@@ -54,7 +55,7 @@
     "react-modal-video": "^1.2.8",
     "react-redux": "^7.2.3",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^5.0.1",
     "react-toastify": "^8.1.0",
     "redux": "^4.0.5",
     "redux-thunk": "^2.4.0",
@@ -88,6 +89,12 @@
     ]
   },
   "devDependencies": {
+    "@babel/cli": "^7.23.0",
+    "@babel/core": "^7.23.0",
+    "@babel/preset-env": "^7.22.20",
+    "@babel/preset-react": "^7.22.15",
+    "ajv": "^7.2.4",
+    "babel-loader": "^9.1.3",
     "i18next": "^21.4.2",
     "react-i18next": "^11.14.0"
   }
