--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/plugin-transform-class-properties": "^7.22.5",
+    "@babel/plugin-transform-nullish-coalescing-operator": "^7.22.11",
+    "@babel/plugin-transform-numeric-separator": "^7.22.11",
+    "@babel/plugin-transform-optional-chaining": "^7.23.0",
+    "@babel/plugin-transform-private-methods": "^7.22.5",
     "@babel/plugin-transform-private-property-in-object": "^7.22.11",
     "@date-io/date-fns": "^1.3.13",
     "@editorjs/checklist": "^1.3.0",
@@ -26,8 +31,6 @@
     "@iconify/icons-eva": "^1.1.0",
     "@iconify/icons-ic": "^1.1.17",
     "@iconify/react": "^3.1.1",
-    "@material-ui/core": "^4.12.3",
-    "@material-ui/pickers": "^3.3.10",
     "@mui/icons-material": "^5.2.4",
     "@mui/lab": "^5.0.0-alpha.54",
     "@mui/material": "^5.1.0",
