--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,70 +2,87 @@
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:5000",
   "dependencies": {
+    "@babel/compat-data": "^7.22.20",
     "@babel/plugin-transform-class-properties": "^7.22.5",
     "@babel/plugin-transform-nullish-coalescing-operator": "^7.22.11",
     "@babel/plugin-transform-numeric-separator": "^7.22.11",
     "@babel/plugin-transform-optional-chaining": "^7.23.0",
     "@babel/plugin-transform-private-methods": "^7.22.5",
     "@babel/plugin-transform-private-property-in-object": "^7.22.11",
+    "@babel/preset-env": "^7.22.20",
     "@date-io/date-fns": "^1.3.13",
-    "@editorjs/checklist": "^1.3.0",
-    "@editorjs/code": "^2.7.0",
-    "@editorjs/delimiter": "^1.2.0",
-    "@editorjs/editorjs": "^2.22.2",
-    "@editorjs/embed": "^2.5.0",
-    "@editorjs/header": "^2.6.2",
-    "@editorjs/image": "^2.6.2",
-    "@editorjs/inline-code": "^1.3.1",
-    "@editorjs/link": "^2.4.0",
-    "@editorjs/list": "^1.6.2",
-    "@editorjs/marker": "^1.2.2",
-    "@editorjs/paragraph": "^2.8.0",
-    "@editorjs/quote": "^2.4.0",
-    "@editorjs/raw": "^2.3.0",
-    "@editorjs/simple-image": "^1.4.1",
-    "@editorjs/warning": "^1.2.0",
-    "@emotion/react": "^11.5.0",
-    "@emotion/styled": "^11.3.0",
-    "@iconify/icons-eva": "^1.1.0",
-    "@iconify/icons-ic": "^1.1.17",
-    "@iconify/react": "^3.1.1",
-    "@mui/icons-material": "^5.2.4",
-    "@mui/lab": "^5.0.0-alpha.54",
-    "@mui/material": "^5.1.0",
-    "@mui/styles": "^5.1.0",
-    "@testing-library/jest-dom": "^5.11.10",
-    "@testing-library/react": "^11.2.6",
-    "@testing-library/user-event": "^12.8.3",
-    "axios": "^0.21.1",
+    "@editorjs/checklist": "^1.5.0",
+    "@editorjs/code": "^2.8.0",
+    "@editorjs/delimiter": "^1.3.0",
+    "@editorjs/editorjs": "^2.28.0",
+    "@editorjs/embed": "^2.5.3",
+    "@editorjs/header": "^2.7.0",
+    "@editorjs/image": "^2.8.1",
+    "@editorjs/inline-code": "^1.4.0",
+    "@editorjs/link": "^2.5.0",
+    "@editorjs/list": "^1.8.0",
+    "@editorjs/marker": "^1.3.0",
+    "@editorjs/paragraph": "^2.10.0",
+    "@editorjs/quote": "^2.5.0",
+    "@editorjs/raw": "^2.4.0",
+    "@editorjs/simple-image": "^1.5.1",
+    "@editorjs/warning": "^1.3.0",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@jridgewell/sourcemap-codec": "^1.4.15",
+    "@mui/icons-material": "^5.14.11",
+    "@mui/lab": "^5.0.0-alpha.146",
+    "@mui/material": "^5.14.11",
+    "@mui/styles": "^5.14.11",
+    "@redux-devtools/extension": "^3.2.5",
+    "@reduxjs/toolkit": "^1.9.5",
+    "@rollup/plugin-terser": "^0.4.3",
+    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
+    "async-lock": "^1.4.0",
+    "axios": "^1.5.1",
+    "babel-loader": "^9.1.1",
+    "bootstrap": "^5.3.1",
     "date-fns": "^2.25.0",
     "editorjs-html": "^3.4.2",
     "editorjs-text-alignment-blocktune": "^1.0.3",
     "firebase": "^8.10.0",
-    "formik": "^2.2.9",
+    "formik": "^2.4.4",
+    "i": "^0.3.7",
+    "i18next": "^23.5.1",
     "i18next-browser-languagedetector": "^6.1.2",
-    "moment-timezone": "^0.5.34",
+    "immutable": "^4.3.2",
+    "keymirror": "^0.1.1",
+    "moment-timezone": "^0.5.43",
+    "npm": "^10.1.0",
     "prop-types": "^15.7.2",
     "query-string": "^7.1.1",
-    "react": "^18.1.0",
+    "react": "^18.2.0",
     "react-confirm-alert": "^3.0.6",
-    "react-dom": "^18.1.0",
-    "react-editor-js": "^2.0.6",
-    "react-image-lightbox": "^5.1.4",
+    "react-dom": "^18.2.0",
+    "react-editor-js": "^2.1.0",
+    "react-i18next": "^13.2.2",
     "react-lazyload": "^3.2.0",
-    "react-loading-skeleton": "^3.0.2",
-    "react-modal-video": "^1.2.8",
-    "react-redux": "^7.2.3",
+    "react-loading-skeleton": "^3.3.1",
+    "react-modal-video": "^2.0.1",
+    "react-redux": "^8.1.2",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^5.0.1",
-    "react-toastify": "^8.1.0",
-    "redux": "^4.0.5",
-    "redux-thunk": "^2.4.0",
-    "sass": "^1.45.2",
+    "react-scripts": "5.0.1",
+    "react-slick": "^0.29.0",
+    "react-toastify": "^9.1.3",
+    "redux": "^4.2.1",
+    "redux-thunk": "^2.4.2",
+    "sass": "^1.68.0",
     "swiper": "^6.8.4",
-    "web-vitals": "^1.1.1",
-    "yup": "^0.32.11"
+    "web-vitals": "^2.1.4",
+    "workbox-background-sync": "^6.6.0",
+    "yup": "^1.2.0"
+  },
+  "resolutions": {
+    "@babel/preset-env": "^7.22.20"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -92,13 +109,6 @@
     ]
   },
   "devDependencies": {
-    "@babel/cli": "^7.23.0",
-    "@babel/core": "^7.23.0",
-    "@babel/preset-env": "^7.22.20",
-    "@babel/preset-react": "^7.22.15",
-   
-    "babel-loader": "^9.1.3",
-    "i18next": "^21.4.2",
-    "react-i18next": "^11.14.0"
+    "ajv": "^7.2.4"
   }
 }
