--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,8 +34,8 @@
     "@jridgewell/sourcemap-codec": "^1.4.15",
     "@mui/icons-material": "^5.2.4",
     "@mui/lab": "^5.0.0-alpha.54",
-    "@mui/material": "^5.2.4",
-    "@mui/styles": "^5.1.0",
+    "@mui/material": "~5.2.4",
+    "@mui/styles": "~5.1.0",
     "@redux-devtools/extension": "^3.2.5",
     "@reduxjs/toolkit": "^1.9.5",
     "@rollup/plugin-terser": "^0.4.3",
